fix: svg spacing issue

--- a/src/components/MaticLogo/maticLogo.scss
+++ b/src/components/MaticLogo/maticLogo.scss
@@ -1,7 +1,12 @@
 @import "../../scss/_variables.scss";
 
 .logo {
-    display: inline-block;
+    display: inline;
+    svg {
+        // svg spacing issue
+        float: left;
+        margin-left: -2px;
+    }
 }
 
 .logo--symbol {
